# cs354r-poolgame

./: .gitignore  3DBilliards_The_User_Manual  BGMusic.cpp  BGMusic.h  Ball.cpp  Ball.h  Client.cpp  Client.h  Component.h  ConstantVelocity.cpp  ConstantVelocity.h  CueStickController.cpp  CueStickController.h  FinalProjectReport.txt  GameEnums.h  GameInfo.cpp  GameInfo.h  GameMessage.pb.cc  GameMessage.pb.h  GameMessage.proto  GameObject.cpp  GameObject.h  GoalController.cpp  GoalController.h  Makefile  Makefile.am  Makefile.in  MinimalOgre.cpp  MinimalOgre.h  ObjectSound.cpp  ObjectSound.h  Physics.cpp  Physics.h  PhysicsBoxCollider.cpp  PhysicsBoxCollider.h  PhysicsCollider.cpp  PhysicsCollider.h  PhysicsSphereCollider.cpp  PhysicsSphereCollider.h  Player.cpp  (+13 more)
autom4te.cache/: requests
boost-network/: client  client.cc  mail.pb.cc  mail.pb.h  mail.proto  make_client  make_server  server  server.cc
materials/: Balls.material
